# run-patrick-run

./: CMakeLists.txt
gpxdata/: 2019-04-16.21.46.51.gpx  2019-04-18.21.03.25.gpx  2019-04-20.20.04.17.gpx  2019-04-20.21.22.58.gpx  2019-04-21.19.20.07.gpx  2019-04-22.21.56.47.gpx  2019-04-24.22.44.43.gpx  2019-04-26.22.22.46.gpx  2019-04-28.21.11.41.gpx  2019-05-01.22.35.06.gpx  2019-05-02.21.10.44.gpx  2019-05-04.22.34.11.gpx  2019-05-05.20.16.46.gpx  2019-05-07.21.11.35.gpx  2019-05-08.21.59.12.gpx  2019-05-09.22.02.08.gpx  2019-05-12.12.18.45.gpx  2019-05-13.19.30.01.gpx  2019-06-10.21.33.58.gpx  2019-06-10.21.34.21.gpx  2019-06-22.22.00.54.gpx  2019-06-24.22.02.41.gpx  2019-06-24.22.03.00.gpx  2019-06-25.21.57.20.gpx  2019-06-27.22.35.52.gpx  2019-06-28.22.26.12.gpx  2019-06-29.19.24.22.gpx  2019-07-07.18.52.06.gpx  2019-07-08.18.22.23.gpx  2019-07-26.19.09.32.gpx  2019-07-27.18.16.11.gpx  2019-07-30.19.28.31.gpx  2019-07-31.21.13.51.gpx  2019-08-03.19.41.17.gpx  2019-08-04.16.12.58.gpx  2019-08-06.20.11.16.gpx  2019-08-08.18.36.54.gpx  2019-08-10.08.29.17.gpx  2019-08-11.17.07.05.gpx  2019-08-13.21.46.42.gpx  (+68 more)
qml/: main.qml
src/: CMakeLists.txt  gpxmanager.cpp  gpxmanager.h  main.cpp  pathinformation.cpp  pathinformation.h
tools/: update_gpx.sh
